# d3dasm

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/d3dasm/: Cargo.toml
crates/d3dasm-cli/: Cargo.toml
crates/d3dasm-cli/examples/: debug_roundtrip.rs  roundtrip.rs  ufx.rs
crates/d3dasm-cli/src/: main.rs
crates/d3dasm/src/: lib.rs
crates/dxbc/: Cargo.toml
crates/dxbc/src/: container.rs  lib.rs  rdef.rs  shex.rs  signature.rs  stat.rs  util.rs
crates/dxbc/src/chunks/: dxil.rs  hash.rs  ildb.rs  ildn.rs  lfs0.rs  libf.rs  libh.rs  mod.rs  priv_.rs  psv0.rs  rdat.rs  rdef.rs  rts0.rs  sfi0.rs  signature.rs  stat.rs
crates/dxbc/src/chunks/psv0/: mod.rs  parse.rs  types.rs  write.rs
crates/dxbc/src/chunks/rdat/: mod.rs  parse.rs  types.rs  write.rs
crates/dxbc/src/shex/: decode.rs  encode.rs  fmt.rs  ir.rs  mod.rs  opcodes.rs  operand.rs
test/: ambientocclusion.ufx  hogan_decal_0000000000000017.ufx  hogan_standard_00000000003009a0.ufx  hogan_standard_00020000a83009a0.ufx  hogan_standard_00020000d8000984.ufx  hogan_standard_00020000d83009a0.ufx  hogan_standard_00080000a8000960.ufx  hogan_water_000000000203a015.ufx  particles_dx12.ump  particles_dx12_0000000000008001.ufx  particles_dx12_0000000000008002.ufx  terrain.ump  terrain_0000000000000002.ufx  terrain_0000000000000003.ufx  terraindecal_0000000000000206.ufx  terraindecal_0000000000000366.ufx  terraindecal_0000000000000825.ufx
